--- a/danel_information_center/app/app.component.html
+++ b/danel_information_center/app/app.component.html
@@ -1,7 +1,12 @@
 ﻿<div class="container-fluid">
+    
+       
+            <language-bar></language-bar>
+        
+    
 
     <main-site-header></main-site-header>
- 
+
     <!--<div class="main-router-outlet">-->
     <router-outlet></router-outlet>
     <!-- </div> -->
