--- a/danel_information_center/app/holdings-dynamic-grouping.component.html
+++ b/danel_information_center/app/holdings-dynamic-grouping.component.html
@@ -1,8 +1,8 @@
 ﻿<div class="row visible-lg visible-md">
     <div class="col-md-2">
 
-        <div class="row">
-            <label for="asset">
+        <div id="" class="row">
+            <label class="col-xs-12" for="asset">
                 <input #asset type="radio" name="optionsRadios" id="asset" (click)="doGroupBy(2)" checked>
                 asset-class
             </label>
