--- a/danel_information_center/app/accounts-list.component.html
+++ b/danel_information_center/app/accounts-list.component.html
@@ -1,5 +1,5 @@
 ﻿
-<div class="col-xs-12">
+<div *ngIf="!hideAccountList" class="col-xs-12">
     <span>current account</span>
     <div class="dropdown inline-element">
         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
